name:                clk-core
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mridsole/clk-core#readme
license:             BSD3
license-file:        LICENSE
author:              David Rapisarda
maintainer:          mridsole@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , World
                     , Entity
  build-depends:       base >= 4.7 && < 5
                     , array
  default-language:    Haskell2010

executable clk-core-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , clk-core
  default-language:    Haskell2010

test-suite clk-core-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , clk-core
                     , array
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mridsole/clk-core
